--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
 old/*
+bin/*
+forms/ui_imviewerControlPanel.h
+forms/ui_imviewerStats.h
+forms/ui_imviewergui.h
+forms/ui_rtplot.h
+makefile.rtimv
+moc/*
+obj/*
+res/qrc_imviewer.cpp
+
+
