--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Fetch package definitions
         run: 'apt-get update'
       - name: Install basic prerequisites
-        run: 'apt-get install -y git sudo build-essential'
+        run: 'apt-get install -y git sudo'
       - name: Check out repository code
         uses: actions/checkout@v4
       - run: 'bash -x scripts/rtimv_provision_ubuntu2204.sh'
