--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
 old/*
 bin/*
-forms/ui_imviewerControlPanel.h
-forms/ui_imviewerStats.h
-forms/ui_rtimvMainWindow.h
-forms/ui_rtplot.h
+forms/ui_*.h
 makefile.librtimv
 makefile.rtimv
 moc/*
